Java: format tests