@@ -3,6 +3,7 @@ package java8.stream;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
@@ -10,9 +11,9 @@ import java.util.stream.StreamSupport;
 /**
  * Создание объекта Stream.
  */
-public class MakeStream {
+class MakeStream {
     @Test
-    public void test() {
+    void test() {
         var empty = Stream.empty();
         var stream = Stream.of("a", "b");
         var range = IntStream.range(1, 5);
@@ -20,8 +21,8 @@ public class MakeStream {
     }
 
     @Test
-    public void iterable() {
-        Iterable<String> itr = Arrays.asList("a", "b");
+    void iterable() {
+        Iterable<String> itr = List.of("a", "b");
         var stream = StreamSupport.stream(itr.spliterator(), false);
     }
 }
